fixed header social links spacing

--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ a {
 
     .social-links-item {
         display: inline-block;
-        margin: 1.2rem 2.4rem;
+        width: calc(90% / 4);
     }
 
     .social-links-link {
@@ -634,6 +634,10 @@ a {
         flex: none;
         width: 100%;
         transform: translateY(0);
+    }
+
+    .panda-image-container {
+        height: auto;
     }
 
     .panda-info-section .wrapper {
